--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head></head>
 	<body>
+		<img src="lewagon-logo-square-b6124eb974be375884558e4464efce48a9b5664f18422768156364363ecdd1fc.png", alt="">
 		<h1>Coming soon ... Le Wagon</h1>
 	</body>
 </html>
