Centered image and tagline

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<head></head>
+	<head>
+		<link rel="stylesheet" href="style.css">
+	</head>
 	<body>
-		<img src="lewagon-logo-square-b6124eb974be375884558e4464efce48a9b5664f18422768156364363ecdd1fc.png", alt="">
-		<h1>Coming soon ... Le Wagon</h1>
+		<div id="container">
+			<img id="logo" src="lewagon-logo-square-b6124eb974be375884558e4464efce48a9b5664f18422768156364363ecdd1fc.png", alt="">
+			<h1>Coming soon ... Le Wagon</h1>
+		</div>
 	</body>
 </html>
